[ui] Fix bleeding code examples

--- a/code.styl
+++ b/code.styl
@@ -16,6 +16,7 @@
     background: #FAFAFA
     border-right: 1px solid #DDD
     color: #999
+    width: 60px
     padding: 12px 0
     text-align: right
     vertical-align: top
@@ -46,6 +47,7 @@
 
   .code
     overflow-y: scroll
+    width: auto
     width: calc(100% - 50px)
 
     pre
